--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # Copyright ToonRips
 
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
+BOT_TOKEN = "7256756588:AAFrbhFahxwslH0VeMiM4TtYmra9tVGi40Y"                              # Require restart after changing it while bot running
 OWNER_ID = "5387108114"                               # Require restart after changing it while bot running
 TELEGRAM_API = "26257599"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "cbdf90a6844992b76e143656f6e07562"   
@@ -64,7 +64,7 @@ LEECH_DUMP_CHAT = ""
 THUMBNAIL_LAYOUT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = "https://mov004-45e54180c7ed.herokuapp.com/"
+BASE_URL = "https://aeo004-033c7b893c36.herokuapp.com/"
 BASE_URL_PORT = "40064"
 WEB_PINCODE = "False"
 #Queueing system
